@@ -2,7 +2,8 @@ name             = IO-All
 author           = Ingy döt Net <ingy@cpan.org>
 license          = Perl_5
 copyright_holder = Ingy döt Net
-version          = 0.57
+version          = 0.58
+:version         = 5.013
 
 [NextRelease]
 [@Git]
@@ -12,7 +13,7 @@ user = ingydotnet
 issues = 1
 
 [MetaJSON]
-[OurPkgVersion]
+[PkgVersion]
 [ReadmeFromPod]
 filename = lib/IO/All.pod
 [PodSyntaxTests]
