@@ -1,4 +1,5 @@
 package IO::All::Base;
+$IO::All::Base::VERSION = '0.58';
 use strict;
 use warnings;
 use Fcntl;
