@@ -1,4 +1,5 @@
 package IO::All::Dir;
+$IO::All::Dir::VERSION = '0.58';
 use strict;
 use warnings;
 use Scalar::Util 'blessed';
