@@ -1,4 +1,5 @@
 package IO::All::File;
+$IO::All::File::VERSION = '0.58';
 use strict;
 use warnings;
 use IO::All::Filesys -base;
