@@ -1,4 +1,5 @@
 package IO::All::Filesys;
+$IO::All::Filesys::VERSION = '0.58';
 use strict;
 use warnings;
 use IO::All::Base -base;
