@@ -1,4 +1,5 @@
 package IO::All::MLDBM;
+$IO::All::MLDBM::VERSION = '0.58';
 use strict;
 use warnings;
 use IO::All::DBM -base;
