@@ -5,12 +5,12 @@ use Test::More tests => 33;
 use IO::All;
 use IO_All_Test;
 
-my $path = f('t/file_spec.t') . q($);
-like(io('././t/file_spec.t')->canonpath, qr/$path/, 'give full canonical path for real files' );
+my $path = f('t/file_spec.t');
+like(io('././t/file_spec.t')->canonpath, qr/\Q$path\E$/, 'give full canonical path for real files' );
 is(io('././t/file_spec.t')->ext, 't');
 is(io('././t/file_spec.t')->extension, 't');
-$path = f('t/bogus') . q($);
-like(io('././t/bogus')->canonpath, qr/$path/, 'give full canonical path for files that could exist');
+$path = f('t/bogus');
+like(io('././t/bogus')->canonpath, qr/\Q$path\E$/, 'give full canonical path for files that could exist');
 is(join(';', grep {! /CVS|\.svn/} io->catdir(qw(t mydir))->all), f 't/mydir/dir1;t/mydir/dir2;t/mydir/file1;t/mydir/file2;t/mydir/file3');
 test_file_contents(io->catfile(qw(t mystuff))->scalar, 't/mystuff');
 test_file_contents(io->join(qw(t mystuff))->scalar, 't/mystuff');
