@@ -1,4 +1,8 @@
 ---
+changes:
+- Fix canonpath on MSWin32
+- Fix marking files as both binary and utf8 (Thanks Mithlandu!) (closes GH#36)
+---
 version: 0.57
 changes:
 - Fix printing to a tie'd object, closes GH#26 (thanks Graham Knop for helping)
